samples/_failures_safe/1761393915_859075_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4534a2df.c: In function ‘main’:
./samples/SAFE/__tmp_4534a2df.c:133:20: error: expected identifier or ‘(’ at end of input
  133 |             struct TransformResult
      |                    ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4534a2df.c:133:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4534a2df.c:133:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4534a2df.c:133:20: error: expected declaration or statement at end of input
